# eqOgre

./: CMakeLists.txt  LICENSE  README.md  main.cpp
assets/particles/: sun.particle
cmake/: FindCollage.cmake  FindEqualizer.cmake  FindGLEW_MX.cmake
configs/: vr_lab_simulation.eqc
datastructures/headers/: diffactor.h  ogreactor.h  vec3.h  vec4.h
datastructures/src/: diffactor.cpp  ogreactor.cpp
equalizer/: CMakeLists.txt  eqrenderer.cpp  eqrenderer.h  eqview.cpp  eqview.h
equalizer/headers/: channel.h  config.h  eqserialization.h  framedata.h  initdata.h  node.h  nodefactory.h  pipe.h  serializablediffactor.h  serializableogreactor.h  window.h
equalizer/src/: channel.cpp  config.cpp  eqserialization.cpp  framedata.cpp  initdata.cpp  node.cpp  nodefactory.cpp  pipe.cpp  serializablediffactor.cpp  serializableogreactor.cpp  window.cpp
ogre/headers/: ogreapplication.h  ogrerenderer.h  ogreview.h
ogre/src/: ogreapplication.cpp  ogrerenderer.cpp  ogreview.cpp
